[package]

name = "tcod_window"
version = "0.0.1"
authors = [ "Nikita Pekin <contact@nikitapek.in>" ]
keywords = ["tcod", "window", "piston"]
description = "A TCOD back-end for the Piston game engine"
license = "GNU GPL v3.0"
readme = "README.md"
repository = "https://github.com/indiv0/tcod_window.git"
homepage = "https://github.com/indiv0/tcod_window"

[lib]

name = "tcod_window"

[dependencies]
pistoncore-input = ">= 0.0.5"
pistoncore-window = ">= 0.0.5"
quack = ">= 0.0.8"
tcod = ">= 0.4.6"
