[package]

name = "tcod_window"
version = "0.0.3"
authors = [ "Nikita Pekin <contact@nikitapek.in>" ]
keywords = ["tcod", "window", "piston"]
description = "A TCOD back-end for the Piston game engine"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/indiv0/tcod_window.git"
homepage = "https://github.com/indiv0/tcod_window"

[lib]

name = "tcod_window"

[dependencies]
pistoncore-input = "0.0.5"
pistoncore-window = "0.0.12"
quack = "0.0.13"
tcod = "0.5.0"
