[package]
authors = ["Nikita Pekin <contact@nikitapek.in>"]
description = "A TCOD back-end for the Piston game engine"
homepage = "https://github.com/indiv0/tcod_window"
include = ["CHANGELOG.md", "Cargo.toml", "LICENSE-APACHE", "LICENSE-MIT", "README.md", "src/**/*.rs"]
keywords = ["tcod", "window", "piston"]
license = "MIT/Apache-2.0"
name = "tcod_window"
readme = "README.md"
repository = "https://github.com/indiv0/tcod_window.git"
version = "0.2.0"

[dependencies]
pistoncore-input = "0.10.0"
pistoncore-window = "0.17.0"
tcod = "0.9.0"

[dependencies.clippy]
optional = true
version = "0.0.63"

[dev-dependencies]
piston = "0.20.0"

[features]
nightly-testing = ["clippy"]

[lib]
name = "tcod_window"
